# minigist

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  release-please-config.json
.clinerules/: 01-architecture.md  02-coding.md  03-behavior.md
.github/workflows/: main.yml  pr.yaml  release.yaml  release.yml
minigist/: cli.py  config.py  constants.py  downloader.py  miniflux_client.py  models.py  processing_counts.py  processor.py  pure_client.py  summarizer.py
minigist/pipeline/: llm_worker.py  update_worker.py
scripts/: remove_summary.py
tests/: conftest.py
tests/unit/: test_config.py
