[project]
name = "minigist"
description = "A tool that monitors your Miniflux feeds for articles without summaries, generates concise summaries using AI, and updates the entries automatically."
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
minigist = "minigist.cli:cli"

[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
